# creativity-game-old

./: .gitignore  Cargo.toml  CreativityGame.code-workspace  README.md  Trunk.toml  macos-release.sh  rust-toolchain.toml  web-deploy.sh  web-release.sh
.cargo/: config.toml
bugged_replicon/: Cargo.toml
bugged_replicon/src/: bevy.rs  core.rs  lib.rs  main.rs  utils.rs
bugged_replicon/src/bevy/: camera.rs  player.rs  renet.rs  setup.rs  ui.rs
bugged_replicon/src/bevy/camera/: dolly_rig.rs
bugged_replicon/src/bevy/player/thrust/: info_processors.rs  stages.rs  thrust_reactions.rs  types.rs
bugged_replicon/src/bevy/renet/: client.rs  server.rs
bugged_replicon/src/bevy/setup/: testparticles.rs
bugged_replicon/src/bevy/ui/: bottom_left.rs  startscreen.rs
bugged_replicon/src/core/: events.rs  pixels.rs
bugged_replicon/src/core/pixels/: structures.rs  world_gen.rs
bugged_replicon/src/core/pixels/structures/: thruster_flags.rs  weapons.rs
bugged_replicon/src/utils/: particles.rs  render_layer.rs  text.rs  triangle.rs  vectors.rs
old/: ui.rs  world_gen.rs
old/ui/: inventory.rs  macros.rs
old/world/: resources.rs
old/world/resources/: _copper.rs  _dirt.rs  _traits.rs
src/: bevy.rs  core.rs  lib.rs  main.rs  tools.rs  utils.rs
src/bevy/: camera.rs  mod.rs  player.rs  renet.rs  setup.rs  ui.rs  utils.rs  world_gen.rs
src/bevy/camera/: dolly_rig.rs  old_orbit.rs  orbit.rs
src/bevy/player/: thrust.rs  weapons.rs
src/bevy/player/thrust/: braking.rs  helpers.rs  info_enactors.rs  info_gathering.rs  info_processors.rs  signed.rs  stages.rs  thrust_reactions.rs  types.rs
src/bevy/renet/: client.rs  server.rs
src/bevy/setup/: stars.rs  testparticles.rs
src/bevy/ui/: bottom_left.rs  camtype.rs  inventory.rs  item_preview.rs  macros.rs  startscreen.rs
src/bevy/world/: mod.rs  resources.rs
src/bevy/world/resources/: copper.rs  dirt.rs  traits.rs  world_gen.rs
src/core/: events.rs  pixels.rs  player.rs  states.rs
src/core/pixels/: macros.rs  structures.rs  world_gen.rs
src/core/pixels/structures/: direction.rs  relative_pixel_point.rs  structure.rs  structure_bundle.rs  structure_part.rs  thruster.rs  thruster_flags.rs  weapons.rs
src/utils/: particles.rs  render_layer.rs  test.rs  text.rs  triangle.rs  vectors.rs
xtask/: Cargo.toml  release.sh  web-dev.sh  windows-release.sh
xtask/src/: main.rs
