[package]
name = "creativity-game"
default-run = "creativity-game"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["xtask"]
exclude = ["surrealdb", "noise-rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["dev",]
dev = ["bevy/dynamic_linking", "dep:bevy_editor_pls", "static_assertions/nightly"]

[dependencies]
bevy = "0.11.2"
bevy_dolly = "0.0.1"
bevy_mod_picking = "0.15.0"
bevy_screen_diagnostics = "0.3.0"
derive_more = "0.99.17"
extension-traits = "1.0.1"
inventory = "0.3.12"
lazy_static = "1.4.0"
noise = { version = "0.8.2", features = ["std"] }
once_cell = "1.18.0"
rand = "0.8.5"
rand_derive = "0.5.0"
# bevy_editor_pls = "0.4.0"
serde = { version = "1.0.188", features = ["derive"] }
static_assertions = "1.1.0"
surrealdb = "1.0.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }

[dependencies.bevy_editor_pls]
git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
branch = "main"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1.2"
getrandom = { version = "0.2.9", features = ["js"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
