[package]
name = "creativity-game"
default-run = "creativity-game"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["xtask"]
exclude = ["surrealdb", "noise-rs", "bevy_editor_pls", "bevy_hanabi", "bevy_transform_gizmo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [profile.dev.package.bevy_rapier3d]
# opt-level = 3


[features]
default = ["dev", "debugging", "desktop"]
## general developing
dev = [
	"bevy/dynamic_linking",
	"dep:bevy_editor_pls",
	"static_assertions/nightly",
	# "bevy_rapier3d/simd-nightly"
	"bevy_rapier3d/simd-stable"
]
## extra debugging tools that can sometimes get in the way
debugging = ["dep:bevycheck"]
desktop = ["hanabi_particles"]
hanabi_particles = ["dep:bevy_hanabi"]

[dependencies]
bevy = "0.11.2"
bevy_dolly = "0.0.1"
bevy_mod_picking = "0.15.0"
bevy_rapier3d = "0.22.0"
bevy_screen_diagnostics = "0.3.0"
bevycheck = { version = "0.5.2", optional = true }
contracts = "0.6.3"
derive_builder = { version = "0.12.0", features = ["clippy"] }
derive_more = "0.99.17"
extension-traits = "1.0.1"
inventory = "0.3.12"
lazy_static = "1.4.0"
noise = { version = "0.8.2", features = ["std", "images"] }
once_cell = "1.18.0"
rand = "0.8.5"
rand_derive = "0.5.0"
# bevy_editor_pls = "0.4.0"
serde = { version = "1.0.188", features = ["derive"] }
static_assertions = "1.1.0"
strum = { version = "0.25.0", features = ["derive"] }
surrealdb = { version = "1.0.0", optional = true }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }

[dependencies.bevy_hanabi]
version = "0.7.0"
optional = true
default-features = false
features = [ "3d", ]

[dependencies.bevy_editor_pls]
git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
branch = "main"
optional = true
features = ["default_windows"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1.2"
getrandom = { version = "0.2.9", features = ["js"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
