[package]
name = "creativity-game"
default-run = "creativity-game"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["xtask", "bevy_replicon"]
exclude = [
	"surrealdb",
	"noise-rs",
	"bevy_editor_pls",
	"bevy_hanabi",
	"bevy_transform_gizmo",
	"bevy_text_mesh",
	"ggrs",
	"bevy_rapier",
	"bevy_ggrs_rapier_example",
	"bevy_ggrs",
	"bevy_ggrs_demo",
	"renet",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [profile.dev.package.bevy_rapier3d]
# opt-level = 3


[features]
default = ["dev", "debugging", "desktop"]
## general developing
dev = [
	"bevy/dynamic_linking",
	"dep:bevy_editor_pls",
	# "static_assertions/nightly",
	# "bevy_rapier3d/simd-nightly"
	"bevy_rapier3d/simd-stable",
]

### feature specific items
desktop = ["hanabi_particles"]
server = []
hanabi_particles = ["dep:bevy_hanabi"]

## extra debugging tools that can sometimes get in the way
debugging = ["dep:bevycheck"]

[dependencies]
bevy = "0.11.2"
# bevy-debug-text-overlay = "6.0.0"
bevy_dolly = "0.0.1"
bevy_egui = "0.22.0"
# bevy_ggrs = "0.13.0"
# bevy_matchbox = { version = "0.7.0", features = [] }
bevy_mod_picking = "0.15.0"
bevy_rapier3d = "0.22.0"
bevy_replicon = "0.15.1"
# bevy_renet = "0.0.9"
bevy_screen_diagnostics = "0.3.0"
bevycheck = { version = "0.5.2", optional = true }
derive_builder = { version = "0.12.0", features = ["clippy"] }
derive_more = "0.99.17"
extension-traits = "1.0.1"
lazy_static = "1.4.0"
meshtext = "0.3.0"
noise = { version = "0.8.2", features = ["std", "images"] }
num-integer = "0.1.45"
once_cell = "1.18.0"
rand = "0.8.5"
rand_derive = "0.5.0"
# bevy_editor_pls = "0.4.0"
serde = { version = "1.0.188", features = ["derive"] }
static_assertions = "1.1.0"
strum = { version = "0.25.0", features = ["derive"] }
# surrealdb = { version = "1.0.0" }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }

[dependencies.bevy_hanabi]
version = "0.7.0"
optional = true
default-features = false
features = ["3d"]

# [dependencies.surrealdb]
# version = "1.0.0"

[dependencies.bevy_renet]
# git = "https://github.com/lucaspoffo/renet.git"
git = "https://github.com/Zajozor/renet.git"
branch = "egui-0.23"
# version = "0.0.9"
features = ["serde"]
[dependencies.renet_visualizer]
# git = "https://github.com/lucaspoffo/renet.git"
git = "https://github.com/Zajozor/renet.git"
branch = "egui-0.23"
features = ["bevy"]

[dependencies.bevy_editor_pls]
git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
branch = "main"
optional = true
features = ["default_windows"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1.2"
getrandom = { version = "0.2.9", features = ["js"] }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
bevy_ggrs = { version = "0.13", features = ["wasm-bindgen"] }
